--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="style2.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
+  <link rel="stylesheet" type="text/css" href="path/to/react-notifications/dist/react-notifications.css">
+<script src="path/to/react-notifications/dist/react-notifications.js"></script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
