--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet" href="style2.css" />
+  <link href="http://fonts.cdnfonts.com/css/games" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
